# ChangeLog for net-misc/dhcpcd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.260 2009/09/25 13:12:57 darkside Exp $

*dhcpcd-5.2.7 (04 Aug 2010)

  04 Aug 2010; Daniel Robbins <drobbins@funtoo.org> +dhcpcd-5.2.7.ebuild:
  new upstream release to fix issues with kernel 2.6.35.

*dhcpcd-5.2.6 (13 Jul 2010)
	
  13 Jul 2010; Daniel Robbins <drobbins@funtoo.org> +dhcpcd-5.2.6.ebuild:
  new upstream release.

*dhcpcd-5.2.5 (01 Jul 2010)

  01 Jul 2010; Daniel Robbins <drobbins@funtoo.org> +dhcpcd-5.2.5.ebuild:
  New release, imported changes from Gentoo, kept our initscript.

*dhcpcd-5.1.2-r1 (17 Oct 2009)

  17 Oct 2009; Daniel Robbins <drobbins@funtoo.org> +dhcpcd-5.1.2-r1.ebuild:
  Slightly modified initscript that no longer references net.lo. Should not be
  necessary as dhcpcd will be added to non-boot runlevel.

*dhcpcd-5.1.2 (16 Oct 2009)

  16 Oct 2009; Daniel Robbins <drobbins@funtoo.org> +dhcpcd-5.1.2.ebuild:
  New upstream release.

*dhcpcd-5.1.1-r1 (15 Oct 2009)

  15 Oct 2009; Daniel Robbins <drobbins@funtoo.org> +dhcpcd-5.1.1-r1.ebuild: no
  longer provide "net" as we don't want dhcpcd to start automatically.  The
  user must add it to their runlevel if they want it to start. Without this
  change, the user must manually modify the dhcpcd initscript and remove
  "provide net" manually if they don't use DHCP.

*dhcpcd-4.0.15 (25 Sep 2009)

  25 Sep 2009; Jeremy Olexa <darkside@gentoo.org> +dhcpcd-4.0.15.ebuild:
  Minor version bump to fix bug 285505 and bug 277095

*dhcpcd-5.1.1 (24 Sep 2009)

  24 Sep 2009; Jeremy Olexa <darkside@gentoo.org> +dhcpcd-5.1.1.ebuild:
  version bump to dhcpcd-5.1.1

  05 Sep 2009; Jeremy Olexa <darkside@gentoo.org> dhcpcd-5.1.0.ebuild:
  Set localstatedir=/var to econf so /var/run is used instead of
  /var/lib/run

*dhcpcd-5.1.0 (05 Sep 2009)

  05 Sep 2009; Jeremy Olexa <darkside@gentoo.org> +dhcpcd-5.1.0.ebuild,
  metadata.xml: