@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.260 2009/09/25 13:12:57 darkside Exp $
 
+*dhcpcd-5.2.8 (20 Oct 2010)
+
+  20 Oct 2010; Daniel Robbins <drobbins@funtoo.org> +dhcpcd-5.2.8.ebuild:
+  New upstream release.
+
 *dhcpcd-5.2.7 (04 Aug 2010)
 
   04 Aug 2010; Daniel Robbins <drobbins@funtoo.org> +dhcpcd-5.2.7.ebuild:
